--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather-app</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
+    <title>Magic-Weather-App</title>
     <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
